# stock-chart-app

./: .gitignore  README.md  render.yaml
backend/: .env.example  main.py  pyproject.toml
backend/tests/: test_main.py
docs/: api.md  architecture.md  deployment.md  frontend.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: StockChart.tsx  StockViewer.tsx
frontend/src/lib/: api.ts
frontend/src/test/: StockViewer.test.tsx
